# library-project

./: .dockerignore  .env.example  .gitignore  docker-compose-backend.yml  docker-compose-ec2.yml  docker-compose.yml
.github/workflows/: ci.yml
library-backend/: Dockerfile  pyproject.toml
library-backend/library_backend/library_api/: models.py  serializers.py  urls.py  views.py
library-backend/library_backend/library_api/migrations/: 0001_initial.py
library-backend/library_backend/library_backend/: serializers.py  settings.py  urls.py  views.py
library-backend/library_backend/validations/: __init__.py  custom_validation.py
library-frontend/: Dockerfile  middleware.ts  package-lock.json  package.json
library-frontend/app/: page.tsx
library-frontend/app/authors/: layout.tsx  page.tsx
library-frontend/app/authors/components/: list-author-item.tsx  list-author.tsx  list-books-modal.tsx  save-author.tsx
library-frontend/app/authors/endpoints/: authorendpoint.ts  bookendpoint.ts
library-frontend/app/authors/interfaces/: book.interface.ts
library-frontend/app/books/: layout.tsx  page.tsx
library-frontend/app/books/components/: book-detail.tsx  book-list.tsx  delete-book-modal.tsx  list-books.tsx
library-frontend/app/books/endpoints/: bookendpoint.ts
library-frontend/app/common/: request.ts
library-frontend/app/login/: page.tsx
library-frontend/app/menu/: sidebar.tsx
library-frontend/app/users/endpoints/: userendpoint.ts
library-frontend/app/users/register/: page.tsx
library-frontend/tests/: author.spec.ts
